--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
 
         <div class="alliances-grid">
           <div class="alliance-item">
-            <img src="./images/Microsoft.png" alt="Microsoft" />
+            <img src="./images/microsoft.png" alt="Microsoft" />
             <p class="partner-type">Solution Partner</p>
           </div>
           <div class="alliance-item">
-            <img src="./images/IBM.png" alt="IBM" />
+            <img src="./images/ibm.png" alt="IBM" />
             <p class="partner-type">T2 Platinum Partner</p>
           </div>
 
@@ -110,7 +110,7 @@
           </div>
 
           <div class="alliance-item">
-            <img src="./images/Dell.png" alt="Dell" />
+            <img src="./images/dell.png" alt="Dell" />
             <p class="partner-type">T2 Gold Partner</p>
           </div>
 
