--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
 
   <body>
-    <!-- ================= HEADER ================= -->
+    <!-- ================= HEADER ================== -->
     <header class="header">
       <div class="header-container">
         <!-- Logo -->
